--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,17 +1,32 @@
 pipeline {
-    agent {
-        docker {
-            image 'node:lts-buster-slim'
-            args '-p 3000:3000'
-        }
-    }
+    agent any
+    
     environment {
         CI = 'true'
     }
+
     stages {
+        stage('Checkout') {
+            steps {
+                checkout([$class: 'GitSCM',
+                          branches: [[name: '*/react-app']],
+                          userRemoteConfigs: [[url: 'git@github.com:fahrul327/a428-cicd-labs.git']]])
+            }
+            post {
+                success {
+                    script {
+                        sh 'git pull'
+                    }
+                }
+            }
+        }
         stage('Build') {
             steps {
-                sh 'npm install'
+                script {
+                    docker.image('node:16-buster-slim').inside('-p 3000:3000') {
+                        sh 'npm install'
+                    }
+                }
             }
         }
         stage('Test') {
